# caraxes

./: .env  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 88bf4a225e8b_create_tables.py  a7992299b7e5_create_tables.py  e2a59ad60958_create_tables.py
src/: __init__.py
src/adapters/controllers/: caraxes_controller.py
src/adapters/data_types/requests/: projects_request.py  tasks_request.py  users_request.py
src/adapters/data_types/responses/: projects_response.py  tasks_response.py  users_response.py
src/adapters/data_types/typed_dicts/: projects_typed_dict.py  tasks_typed_dict.py  users_typed_dict.py
src/adapters/repositories/projects/: repository.py
src/adapters/repositories/tasks/: repository.py
src/adapters/repositories/users/: repository.py
src/domain/enums/http_response/: enum.py  internal_code.py
src/domain/enums/projects/: enum.py
src/domain/enums/tasks/: enum.py
src/domain/exceptions/base/: exception.py
src/domain/exceptions/domain/: exception.py
src/domain/exceptions/infrastructure/: exception.py
src/domain/exceptions/repository/: exception.py
src/domain/exceptions/service/: exception.py
src/domain/models/http_response/: model.py
src/domain/models/projects/: model.py
src/domain/models/tasks/: model.py
src/domain/models/users/: model.py
src/services/projects/: service.py
src/services/tasks/: service.py
src/services/users/: service.py
tests/: conftest.py
tests/src/services/: stubs.py
(+5 files in other folders)
