[tool.poetry]
name = "caraxes"
version = "0.1.0"
description = "Projects and task management API"
authors = ["Vinicius Reis <v_reis@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
python-decouple = "^3.8"
pyfiglet = "^1.0.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
